v4.4
-----
+ Adds "X games with drops remaining" to badge page
+ Adds foil badge progress link to non-foil badge progress page
: Fixes a bug where foil badges were linking to non-foil market pages
: Better uPlay and GFWL DRM detection on app pages

v4.3
-----
+ Adds option on badge page to hide games with no drops remaining
+ Adds game bundle purchase support to applicable app pages
: Fixed a bug where market transaction processing was happening on every market page
: Fixed a bug on the options page if language is Spanish
: Fixed a bug where HLTB info was displaying twice on apps with WSGF certification

v4.2
-----
: Fix bug in international currency formatting
+ Adds support for Steam Workshop icon on app page linking to search page
: Updated Italian, Russian, French, and Spanish translations
+ Adds HowLongToBeat information on the app page
+ Adds achievement stats to the "All games" list

v4.1
-----
+ Adds automatic language settings detection
+ Adds marketplace transaction summary to market homepage
: Fixes a bug where coupons were showing incorrect expiration dates
: Optimized some code for faster loading
+ Adds a "Remove from wishlist" button the app page of wishlisted items

v4.0.1
-----
+ Adds highlighting to sales pages
+ Updated Italian and Portuguese translations

v4.0
-----
+ Add "Total drops remaining" to Badges page
+ Added search, filtering, achievements, news, and links to Library page
: Moving to new price history API
: Updated multiple translations
+ Added "Library" link to SteamCommunity pages
: Fixed "Total Spent" to work in all languages (Thanks johnc!)
: Library feature now enabled by default
+ Adds marketplace links to badge progress pages

v3.9.9
-----
+ Adds automatic age verification to Steam store
+ Adds SteamCardExchange links to badge and badge progress pages
+ Adds DLC categorization to a game's DLC page
+ Adds remaining card drops count
: Library updates
+ Adds an "Add all unowned DLC to cart" button on game's DLC page