@@ -4,6 +4,7 @@ v4.4
 + Adds foil badge progress link to non-foil badge progress page
 : Fixes a bug where foil badges were linking to non-foil market pages
 : Better uPlay and GFWL DRM detection on app pages
++ Adds highlighting to more sales pages, midweek and weekend deals
 
 v4.3
 -----
